--- a/Backend/Gemfile
+++ b/Backend/Gemfile
@@ -12,6 +12,10 @@ gem "sqlite3", "~> 1.4"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
 
+#Use serializer and bcrypt
+gem 'active_model_serializers', '~> 0.10.12'
+gem 'bcrypt', '~> 3.1.7'
+
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 
